import "Skill.proto";

option java_package = "com.hawk.game.protocol";

// struct-------------------------------------------------------

message HSMonster
{
	required int32 monsterId = 1;
	required int32 cfgId = 2;
	required int32 grade = 3;
	required int32 level = 4;
	required int32 exp = 5;
	required int32 equipId = 6;
	required int32 disposition = 7;
	repeated HSSkill skillList = 8;
}

// protocol-----------------------------------------------------

// MONSTER_ADD_S
message HSMonsterAdd
{
	required HSMonster monster = 1;
	optional int32 reason = 2;
}

// MONSTER_BREAK_C
message HSMonsterBreak
{
	required int32 monsterId = 1;
}

// MONSTER_BREAK_S
message HSMonsterBreakRet
{
	required int32 status = 1;
	required int32 monsterId = 2;
}

//MONSTER_FEED_C
message HSMonsterFeed
{
	required int32 monsterId = 1;
	required int32 foodMonsterId = 2;
}

// MONSTER_FEED_S
message HSMonsterFeedRet
{
	required int32 status = 1;
	required int32 monsterId = 2;
	required int32 foodMonsterId = 3;
	optional int32 exp = 4;
	optional int32 level = 5;
}